Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p><a href="https://github.com/SaltPepp" class="user-mention">@SaltPepp</a>
-<a href="https://github.com/JPCDev" class="user-mention">@JPCDev</a>
-<a href="https://github.com/Mindspace" class="user-mention">@Mindspace</a></p>
+<a href="https://github.com/jpcsupplies" class="user-mention">@jpcsupplies</a>
+<a href="https://github.com/midspace" class="user-mention">@midspace</a></p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
